kubernetes/petshop-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: petshop-db
  namespace: petshop
spec:
  serviceName: "petshop-db-headless"
  replicas: 3
  selector:
    matchLabels:
      app: petshop-db
  template:
    metadata:
      labels:
        app: petshop-db
    spec:
      dnsConfig:
        searches:
          - petshop-db-headless.petshop.svc.cluster.local
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: petshop-db
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: petshop-db
          image: mongo:4.4
          command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: petshop-db-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: petshop-db-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi



# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: petshop-db
#   namespace: petshop
# spec:
#   serviceName: "petshop-db"
#   replicas: 2
#   selector:
#     matchLabels:
#       app: petshop-db
#   template:
#     metadata:
#       labels:
#         app: petshop-db
#     spec:
#       affinity:
#         podAntiAffinity:
#           preferredDuringSchedulingIgnoredDuringExecution:
#             - weight: 100
#               podAffinityTerm:
#                 labelSelector:
#                   matchLabels:
#                     app: petshop-db
#                 topologyKey: "kubernetes.io/hostname"
#       containers:
#         - name: petshop-db
#           image: mongo:4.2
#           command:
#             - /bin/bash
#             - -c
#             - |
#               if [[ "$(hostname)" == "petshop-db-0" ]]; then
#                 echo "Initializing MongoDB Replica Set...";
#                 sleep 30;
#                 mongo --host petshop-db-0.petshop-db.petshop.svc.cluster.local --eval '
#                 rs.initiate({
#                   _id: "rs0",
#                   members: [
#                     { _id: 0, host: "petshop-db-0.petshop-db.petshop.svc.cluster.local:27017" },
#                     { _id: 1, host: "petshop-db-1.petshop-db.petshop.svc.cluster.local:27017" }
#                   ]
#                 });
#                 ';
#               fi
#               # Start MongoDB
#               exec mongod --bind_ip_all
#           ports:
#             - containerPort: 27017
#           volumeMounts:
#             - name: petshop-db-storage
#               mountPath: /data/db
#           env:
#             - name: MONGO_INITDB_ROOT_USERNAME
#               valueFrom:
#                 secretKeyRef:
#                   name: petshop-app-secret  
#                   key: app-root-username
#             - name: MONGO_INITDB_ROOT_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: petshop-app-secret 
#                   key: app-root-password
#   volumeClaimTemplates:
#     - metadata:
#         name: petshop-db-storage
#       spec:
#         accessModes: ["ReadWriteOnce"]
#         resources:
#           requests:
#             storage: 1Gi
