kubernetes/petshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petshop-app-deploy
  namespace: petshop
  labels:
    app: petshop
    environment: production
    team: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petshop
  template:
    metadata:
      labels:
        app: petshop
    spec:
      containers:
        - name: petshop-app
          image: zdrave893/petshop-app:31-01-2025-18-48-573af-master
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/app/data"
              name: app-storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
