kubernetes/petshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petshop-app-service
  namespace: petshop
spec:
  selector:
    app: petshop
  ports:
    - protocol: TCP
      port: 5000        
      targetPort: 5000  
  type: ClusterIP
